<resources>
    <string name="app_name">Silent Contacts</string>
    <string name="alternate_title">"SilentContacts - SilentCircle's contact application"</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="recentCalls_addToContact">Add to contacts</string>
    <string name="recentCalls_empty">Call log is empty.</string>
    <string name="recentCalls_deleteAll">Clear call log</string>
    <string name="recentCalls_callNumber">Call %s</string>
    <string name="recentCalls_editNumberBeforeCall">Edit number before call</string>
    <string name="recentCalls_removeFromRecentList">Remove from call log</string>
    <string name="recentCalls_removeSameFromRecentList">Remove related entries</string>
    <string name="type_incoming">Incoming call</string>
    <string name="type_outgoing">Outgoing call</string>
    <string name="type_missed">Missed call</string>
    <string name="callDetailTitle">Call details</string>
    <string name="menu_show_outgoing_only">Show outgoing only</string>
    <string name="menu_show_incoming_only">Show incoming only</string>
    <string name="menu_show_missed_only">Show missed only</string>
    <string name="menu_show_all_calls">Show all calls</string>
    <string name="menu_callNumber">Call %s</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="call_log_empty_gecode">-</string>
    <string name="call_log_new_header">New</string>
    <string name="call_log_old_header">Older</string>
    <string name="call_log_incoming_header">Incoming calls only</string>
    <string name="call_log_outgoing_header">Outgoing calls only</string>
    <string name="call_log_missed_header">Missed calls only</string>
    <string name="call_log_item_count_and_date">(%1$d) %2$s</string>
    <string name="callDetailsDurationFormat">%1$s mins %2$s secs</string>
    <string name="toast_call_detail_error">Couldn\'t read details for the requested call.</string>
    <string name="description_view_contact">View contact %1$s</string>
    <string name="description_add_contact">Add contact</string>
    <string name="clearCallLogProgress_title">Clearing call log\u2026</string>
    <string name="clearCallLogConfirmation_title">Clear call log?</string>
    <string name="clearCallLogConfirmation">All your call records will be deleted.</string>
    <string name="description_send_text_message">Send text message to %1$s</string>
    <string name="description_call">Call %1$s</string>
    <string name="phoneTypeCustom">Custom</string>
    <string name="phoneTypeHome">Home</string>
    <string name="phoneTypeMobile">Mobile</string>
    <string name="phoneTypeWork">Work</string>
    <string name="phoneTypeSilent">SilentPhone</string>
    <string name="emailTypeCustom">Custom</string>
    <string name="emailTypeHome">Home</string>
    <string name="emailTypeWork">Work</string>
    <string name="emailTypeOther">Other</string>
    <string name="emailTypeMobile">Mobile</string>
    <string name="postalTypeCustom">Custom</string>
    <string name="postalTypeHome">Home</string>
    <string name="postalTypeWork">Work</string>
    <string name="postalTypeOther">Other</string>
    <string name="imTypeCustom">Custom</string>
    <string name="imTypeHome">Home</string>
    <string name="imTypeWork">Work</string>
    <string name="imTypeOther">Other</string>
    <string name="imTypeSilent">SilentText</string>
    <string name="imProtocolCustom">Custom</string>
    <string name="imProtocolAim">AIM</string>
    <string name="imProtocolMsn">Windows Live</string>
    <string name="imProtocolYahoo">Yahoo</string>
    <string name="imProtocolSkype">Skype</string>
    <string name="imProtocolQq">QQ</string>
    <string name="imProtocolGoogleTalk">Google Talk</string>
    <string name="imProtocolIcq">ICQ</string>
    <string name="imProtocolJabber">Jabber</string>
    <string name="imProtocolNetMeeting">NetMeeting</string>
    <string name="imProtocolSilent">SilentCircle</string>
    <string name="add_contact_dlg_message_fmt">Add \"%s\" to contacts?</string>
    <string name="contactsList">Contacts</string>
    <string name="local_invisible_directory">Other</string>
    <string name="local_search_label">All contacts</string>
    <string name="user_profile_contacts_list_header" msgid="9154761216179882405">Me</string>
    <string name="directory_search_label">Directory</string>
    <string name="search_results_searching">Searching\u2026</string>
    <string name="foundTooManyContacts">More than %d found.</string>
    <string name="listFoundAllContactsZero">No contacts</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <plurals name="searchFoundContacts">
        <item quantity="one">1 found</item>
        <item quantity="other">%d found</item>
    </plurals>
    <plurals name="listTotalAllContacts">
        <item quantity="one">1 contact</item>
        <item quantity="other">%d contacts</item>
    </plurals>
    <string name="no_contact_details">No additional information for this contact.</string>
    <string name="noContactsWithPhoneNumbers">No contacts with phone numbers.</string>
    <string name="noFavoritesHelpText">"You don't have any favorites.\n\nTo add a contact to your list of favorites:\n
        <li>Touch the <b>Contacts</b> tab\n</li>
        \n<li>Touch the contact you want to add to your favorites\n</li>
        \n<li>Touch the star next to the contact\'s name\n</li>"
    </string>
    <string name="noMatchingContacts">No matching contacts found.</string>
    <string name="no_contacts_selected">"No contacts selected."</string>
    <string name="noContactsHelpTextWithSyncForCreateShortcut">"You don't have any contacts to display. (If you just added an account, it can take a few minutes to sync contacts.)"</string>
    <string name="noContactsHelpTextWithSync">"You don't have any contacts to display. (If you just added an account, it can take a few minutes to sync contacts.)\n\nTo add contacts, touch <font fgcolor="#ffffffff"><b>Menu</b></font>, then touch:\n
        \n<li><font fgcolor="#ffffffff"><b>Accounts</b></font> to add or set up an account with contacts you can sync to the phone\n</li>
        \n<li><font fgcolor="#ffffffff"><b>Display options</b></font> to change which contacts are visible\n</li>
        \n<li><font fgcolor="#ffffffff"><b>New contact</b></font> to create a new contact from scratch\n</li>
        \n<li><font fgcolor="#ffffffff"><b>Import/Export</b></font> to import contacts from your SIM or SD card\n</li>"
    </string>
    <string name="noContactsNoSimHelpTextWithSync">"You don't have any contacts to display. (If you just added an account, it can take a few minutes to sync contacts.)\n\nTo add contacts, touch <font fgcolor="#ffffffff"><b>Menu</b></font>, then touch:\n
        \n<li><font fgcolor="#ffffffff"><b>Accounts</b></font> to add or set up an account with contacts you can sync to the phone\n</li>
        \n<li><font fgcolor="#ffffffff"><b>Display options</b></font> to change which contacts are visible\n</li>
        \n<li><font fgcolor="#ffffffff"><b>New contact</b></font> to create a new contact from scratch\n</li>
        \n<li><font fgcolor="#ffffffff"><b>Import/Export</b></font> to import contacts from your SD card\n</li>"
    </string>
    <string name="noContactsHelpTextForCreateShortcut">"You don't have any contacts to display."</string>
    <string name="noContactsHelpText">"You don't have any contacts to display.\n\nTo add contacts, touch <font fgcolor="#ffffffff"><b>Menu</b></font>, then touch:\n
        \n<li><font fgcolor="#ffffffff"><b>Accounts</b></font> to add or set up an account with contacts you can sync to the phone\n</li>
        \n<li><font fgcolor="#ffffffff"><b>New contact</b></font> to create a new contact from scratch\n</li>
        \n<li><font fgcolor="#ffffffff"><b>Import/Export</b></font> to import contacts from your SIM or SD card\n</li>"
    </string>
    <string name="noContactsNoSimHelpText">"You don't have any contacts to display.\n\nTo add contacts, touch <font fgcolor="#ffffffff"><b>Menu</b></font>, then touch:\n
        \n<li><font fgcolor="#ffffffff"><b>Accounts</b></font> to add or set up an account with contacts you can sync to the phone\n</li>
        \n<li><font fgcolor="#ffffffff"><b>New contact</b></font> to create a new contact from scratch\n</li>
        \n<li><font fgcolor="#ffffffff"><b>Import/Export</b></font> to import contacts from your SD card\n</li>"
    </string>
    <string name="missing_name">(No name)</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="profile_display_name">Set up my profile</string>
    <string name="listTotalAllContactsZero">No contacts.</string>
    <string name="listTotalAllContactsZeroCustom">No visible contacts.</string>
    <string name="listTotalAllContactsZeroStarred">No favorites.</string>
    <string name="listTotalAllContactsZeroGroup">No contacts in %s</string>
    <string name="listTotalPhoneContactsZero">No contacts with phone numbers</string>
    <string name="menu_search">Search</string>
    <string name="menu_new_contact_action_bar">Add Contact</string>
    <string name="menu_new_group_action_bar">Add Group</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_clear_frequents">Clear frequents</string>
    <string name="menu_contacts_filter">Contacts to display</string>
    <string name="menu_import_export">Import/export</string>
    <string name="menu_remove_vcard_files">Remove vCards</string>
    <string name="menu_export_database">Export database files</string>
    <string name="menu_settings" msgid="377929915873428211">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="hint_findContacts">Find contacts</string>
    <string name="contactsAllLabel">All contacts</string>
    <string name="contactsGroupsLabel">Groups</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="viewContactDesription">View contact</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="account_phone">Device-only, unsynced</string>
    <string name="view_updates_from_group">View updates</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="expand_collapse_name_fields_description">Expand or collapse name fields</string>
    <string name="description_minus_button">delete</string>
    <string name="description_contact_photo">contact photo</string>
    <string name="nameLabelsGroup">Name</string>
    <string name="nicknameLabelsGroup">Nickname</string>
    <string name="organizationLabelsGroup">Organization</string>
    <string name="groupsLabel">Groups</string>
    <string name="full_name">Name</string>
    <string name="name_given">Given name</string>
    <string name="name_family">Family name</string>
    <string name="name_prefix">Name prefix</string>
    <string name="name_middle">Middle name</string>
    <string name="name_suffix">Name suffix</string>
    <string name="name_phonetic_given">Phonetic given name</string>
    <string name="name_phonetic_middle">Phonetic middle name</string>
    <string name="name_phonetic_family">Phonetic family name</string>
    <string name="name_phonetic">Phonetic name</string>
    <string name="recent" msgid="2062236709538790412">Recent</string>
    <string name="postal_address">Address</string>
    <string name="key_manager">Silent Circle KeyManager</string>
    <string name="password_hint">Enter password</string>
    <string name="password_hint_old">Enter old password</string>
    <string name="password_hint2">Enter password (verify)</string>
    <string name="lock">Lock</string>
    <string name="show_pw">Show password</string>
</resources>